fixed navbar on mobile

--- a/navbar.css
+++ b/navbar.css
@@ -50,12 +50,12 @@
   /* margin: 0; */
   position: absolute;
   top: 101%;
-
+  width: 100vw;
   display: flex;
   flex-direction: column;
   padding: 6px;
   gap: 15px;
-  transition: 0.35s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 .dropDown > div {
   padding: 4px;
@@ -63,7 +63,7 @@
 .dropDown > div:hover {
   background-color: blue;
   border-radius: 3px;
-  transition: 0.25s;
+  transition: 0.3s ease-in-out;
 }
 .active {
   opacity: 1;
@@ -104,17 +104,11 @@ a {
   }
   .menu {
     display: block;
-    /* position: absolute;
-    top: 0;
-    left: 0; */
-
     width: 60px;
     z-index: 5;
   }
   .navbar {
     flex-direction: column;
-
-    /* display: none; */
   }
   .displayNone {
     display: none;
